# sentry-gha

./: .pre-commit-config.yaml  .pre-commit-config.yml  pyproject.toml  test_main.py
.github/workflows/: python-package.yml
__snapshots__/: test_main.ambr
src/sentry_gha/: __init__.py
