[project]
name = "sentry-gha"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Elliana May", email = "me@mause.me" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"
