[project]
name = "sentry-gha"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Elliana May", email = "me@mause.me" }]
dependencies = [
  "rich>=14.2.0",
  "ruamel-yaml>=0.18.16",
  "sentry-sdk>=2.44.0",
]

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "ANN"]
